--- a/Projects/CoX/Common/Servers/CMakeLists.txt
+++ b/Projects/CoX/Common/Servers/CMakeLists.txt
@@ -1,4 +1,3 @@
-find_package(PostgreSQL REQUIRED) # PostgreSQL
 
 SET(target_CPP
 ${CMAKE_CURRENT_SOURCE_DIR}/AdminServerInterface.cpp
@@ -11,7 +10,6 @@ ${CMAKE_CURRENT_SOURCE_DIR}/ServerHandle.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/ServerManager.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/InterfaceManager.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/Database.cpp
-${CMAKE_CURRENT_SOURCE_DIR}/PsqlDatabase.cpp
 #${CMAKE_CURRENT_SOURCE_DIR}/CRUD_Link.cpp
 )
 SET(target_INCLUDE
@@ -30,9 +28,14 @@ ${CMAKE_CURRENT_SOURCE_DIR}/Database.h
 ${CMAKE_CURRENT_SOURCE_DIR}/CRUD_Link.h
 ${CMAKE_CURRENT_SOURCE_DIR}/CRUD_Events.h
 ${CMAKE_CURRENT_SOURCE_DIR}/crud_link.inl
-${CMAKE_CURRENT_SOURCE_DIR}/PsqlDatabase.h
 )
 
+find_package(PostgreSQL REQUIRED) # PostgreSQL
+SET(PsqlDbPlugin_SOURCES
+${CMAKE_CURRENT_SOURCE_DIR}/PsqlDatabase.cpp
+${CMAKE_CURRENT_SOURCE_DIR}/PsqlDatabase.h
+
+)
 
 SET(target_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 SET(target_DEPENDS ${PostgreSQL_LIBRARIES})
@@ -43,6 +46,7 @@ SEGS_ADD_COMPONENT(network_structures LIB)
 SET (target_SOURCES
 ${target_CPP}
 ${target_INCLUDE}
+${PsqlDbPlugin_SOURCES}
 )
 
 INCLUDE_DIRECTORIES(${target_INCLUDE_DIR})
