--- a/Projects/CoX/Common/CRUDP_Protocol/CMakeLists.txt
+++ b/Projects/CoX/Common/CRUDP_Protocol/CMakeLists.txt
@@ -18,7 +18,7 @@ ${CMAKE_CURRENT_SOURCE_DIR}/PacketCodec.h
 
 SET(target_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 
-SEGS_ADD_COMPONENT(Bitstream SOURCE)
+SEGS_ADD_COMPONENT(Bitstream LIB)
 
 SET (target_SOURCES
 ${target_CPP}
@@ -29,6 +29,8 @@ INCLUDE_DIRECTORIES(${target_INCLUDE_DIR})
 INCLUDE_DIRECTORIES(${ACE_path})
 INCLUDE_DIRECTORIES(${ZLIB_INCLUDE_DIR})
 
-SEGS_REGISTER_COMPONENT(CRUDP_Protocol "${target_INCLUDE_DIR}" "${target_CPP}" "${target_INCLUDE}" )
+ADD_LIBRARY(CRUDP_Protocol ${target_SOURCES})
+
+SEGS_REGISTER_COMPONENT(CRUDP_Protocol "${target_INCLUDE_DIR}" "${target_INCLUDE}" )
 
 
