Fix finding/linking with OpenSceneGraph
A few other build related fixes.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
+CMAKE_MINIMUM_REQUIRED(VERSION 2.8.10)
 
 PROJECT(SEGS)
 IF(CMAKE_CXX_COMPILER MATCHES cl.exe)
@@ -43,7 +43,7 @@ ExternalProject_Add(
    INSTALL_DIR ${PROJECT_SOURCE_DIR}/3rd_party/
    CMAKE_ARGS -DCMAKE_INSTALL_PREFIX:PATH=<INSTALL_DIR> -DBUILD_OSG_APPLICATIONS:BOOL=OFF -DOSG_GL1_AVAILABLE:BOOL=OFF -DOSG_GL2_AVAILABLE:BOOL=OFF -DOSG_GL_DISPLAYLISTS_AVAILABLE:BOOL=OFF -DOSG_GL_FIXED_FUNCTION_AVAILABLE:BOOL=OFF -DOSG_GL_MATRICES_AVAILABLE:BOOL=OFF -DOSG_GL_VERTEX_ARRAY_FUNCS_AVAILABLE:BOOL=OFF -DOSG_GL_VERTEX_FUNCS_AVAILABLE:BOOL=OFF -DOSG_USE_QT:BOOL=OFF -DLIB_POSTFIX=
 )
-SET(OSG_path ${PROJECT_SOURCE_DIR}/3rd_party)
+SET(OSG_DIR ${PROJECT_SOURCE_DIR}/3rd_party)
 
 
 ExternalProject_add(
@@ -59,6 +59,7 @@ SET(SQLite_LIBRARIES sqlite)
 
 find_package(Threads REQUIRED)
 find_package(ZLIB REQUIRED)
+find_package(OpenSceneGraph REQUIRED)
 link_directories(${PostgreSQL_LIBRARY_DIRS})
 
 ########################################################################################
