--- a/Projects/CoX/Common/Servers/CMakeLists.txt
+++ b/Projects/CoX/Common/Servers/CMakeLists.txt
@@ -38,7 +38,8 @@ ${CMAKE_CURRENT_SOURCE_DIR}/PsqlDatabase.h
 )
 
 SET(target_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
-SET(target_DEPENDS ${PostgreSQL_LIBRARIES})
+SET(target_DEPENDS "")
+
 SEGS_ADD_COMPONENT(ConfigExtensions LIB)
 SEGS_ADD_COMPONENT(EventSystem LIB)
 SEGS_ADD_COMPONENT(network_structures LIB)
