Add sqlite database class skeleton

--- a/Projects/CoX/Common/Servers/CMakeLists.txt
+++ b/Projects/CoX/Common/Servers/CMakeLists.txt
@@ -34,7 +34,11 @@ find_package(PostgreSQL REQUIRED) # PostgreSQL
 SET(PsqlDbPlugin_SOURCES
 ${CMAKE_CURRENT_SOURCE_DIR}/PsqlDatabase.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/PsqlDatabase.h
+)
 
+SET(SqliteDbPlugin_SOURCES
+${CMAKE_CURRENT_SOURCE_DIR}/SqliteDatabase.cpp
+${CMAKE_CURRENT_SOURCE_DIR}/SqliteDatabase.h
 )
 
 SET(target_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
@@ -48,10 +52,12 @@ SET (target_SOURCES
 ${target_CPP}
 ${target_INCLUDE}
 ${PsqlDbPlugin_SOURCES}
+${SqliteDbPlugin_SOURCES}
 )
 
 INCLUDE_DIRECTORIES(${target_INCLUDE_DIR})
 INCLUDE_DIRECTORIES(${PostgreSQL_INCLUDE_DIRS})
+INCLUDE_DIRECTORIES(${SQLite_path})
 INCLUDE_DIRECTORIES(${ACE_path})
 INCLUDE_DIRECTORIES(${ZLIB_INCLUDE_DIR})
 
