--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,7 @@ ExternalProject_Add(
    CMAKE_ARGS -DCMAKE_INSTALL_PREFIX:PATH=<INSTALL_DIR> -DBUILD_OSG_APPLICATIONS:BOOL=OFF -DOSG_GL1_AVAILABLE:BOOL=OFF -DOSG_GL2_AVAILABLE:BOOL=OFF -DOSG_GL_DISPLAYLISTS_AVAILABLE:BOOL=OFF -DOSG_GL_FIXED_FUNCTION_AVAILABLE:BOOL=OFF -DOSG_GL_MATRICES_AVAILABLE:BOOL=OFF -DOSG_GL_VERTEX_ARRAY_FUNCS_AVAILABLE:BOOL=OFF -DOSG_GL_VERTEX_FUNCS_AVAILABLE:BOOL=OFF -DOSG_USE_QT:BOOL=OFF -DLIB_POSTFIX=
 )
 SET(OSG_DIR ${PROJECT_SOURCE_DIR}/3rd_party)
+SET(OPENSCENEGRAPH_LIBRARIES osgDB osg)
 
 
 ExternalProject_add(
@@ -69,10 +70,11 @@ SET(ZLIB_path ${PROJECT_SOURCE_DIR}/3rd_party)
 SET(ZLIB_INCLUDE_DIR ${ZLIB_path}/include)
 SET(ZLIB_LIBRARIES z)
 
+LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)
 
 find_package(Threads REQUIRED)
 
-find_package(OpenSceneGraph REQUIRED)
+
 link_directories(${PostgreSQL_LIBRARY_DIRS})
 
 ########################################################################################
