Remove unused reference to ace header from Buffer.h

--- a/Components/Bitstream/CMakeLists.txt
+++ b/Components/Bitstream/CMakeLists.txt
@@ -21,4 +21,5 @@ INCLUDE_DIRECTORIES(${target_INCLUDE_DIR})
 INCLUDE_DIRECTORIES(${ACE_path})
 INCLUDE_DIRECTORIES(${ZLIB_INCLUDE_DIR})
 add_library(Bitstream ${target_SOURCES} )
+#add_dependencies(Bitstream ACE_BUILD)
 SEGS_REGISTER_COMPONENT(Bitstream "${target_INCLUDE_DIR}" "${target_INCLUDE}" )
