--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,9 +2,9 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.8.10)
 
 PROJECT(SEGS)
 IF(CMAKE_CXX_COMPILER MATCHES cl.exe)
-    add_definitions( -D_CRT_SECURE_NO_WARNINGS -D_CRT_NONSTDC_NO_WARNINGS)
+    add_definitions( -D_CRT_SECURE_NO_WARNINGS -D_CRT_NONSTDC_NO_WARNINGS -DNOMINMAX)
 ELSE()
-   SET(CMAKE_CXX_FLAGS "-Wall -Wextra -std=c++11"  )
+   SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -std=c++11"  )
 endif()
 add_definitions(-D__STDC_FORMAT_MACROS)
 
@@ -46,6 +46,11 @@ ExternalProject_Add(
 SET(OSG_DIR ${PROJECT_SOURCE_DIR}/3rd_party)
 SET(OPENSCENEGRAPH_LIBRARIES osgDB osg)
 
+IF(CMAKE_CXX_COMPILER MATCHES cl.exe)
+	SET(OPENSCENEGRAPH_LIBRARIES osgDBd osgd)
+ELSE()
+	SET(OPENSCENEGRAPH_LIBRARIES  osgDB osg)
+endif()
 
 ExternalProject_add(
    SQLite_BUILD
@@ -68,7 +73,11 @@ ExternalProject_add(
 )
 SET(ZLIB_path ${PROJECT_SOURCE_DIR}/3rd_party)
 SET(ZLIB_INCLUDE_DIR ${ZLIB_path}/include)
-SET(ZLIB_LIBRARIES z)
+IF(CMAKE_CXX_COMPILER MATCHES cl.exe)
+	SET(ZLIB_LIBRARIES zlibd)
+ELSE()
+    SET(ZLIB_LIBRARIES z)
+endif()
 
 LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)
 
