--- a/Projects/CoX/Servers/MapServer/CMakeLists.txt
+++ b/Projects/CoX/Servers/MapServer/CMakeLists.txt
@@ -48,7 +48,7 @@ ${target_CPP}
 ${target_INCLUDE}
 )
 ADD_LIBRARY(mapserver_lib STATIC ${target_SOURCES})
-ADD_DEPENDENCIES(mapserver_lib ${target_DEPENDS} OSG_BUILD)
+ADD_DEPENDENCIES(mapserver_lib ${target_DEPENDS})
 
 SEGS_REGISTER_COMPONENT(mapserver_lib "${target_INCLUDE_DIR}" "${target_INCLUDE}" )
 
