--- a/Projects/CoX/CMakeLists.txt
+++ b/Projects/CoX/CMakeLists.txt
@@ -2,6 +2,7 @@ find_package(PostgreSQL) # PostgreSQL
 if(PostgreSQL_FOUND)
     add_definitions(-DHAVE_POSTGRES)
 endif()
+include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
 ADD_SUBDIRECTORY(Common)
 ADD_SUBDIRECTORY(Utilities)
