--- a/Projects/CoX/Servers/GameServer/CMakeLists.txt
+++ b/Projects/CoX/Servers/GameServer/CMakeLists.txt
@@ -30,6 +30,7 @@ ${target_CPP}
 ${target_INCLUDE}
 )
 ADD_LIBRARY(gameserver_lib STATIC ${target_SOURCES})
+qt5_use_modules(gameserver_lib Core)
 ADD_DEPENDENCIES(gameserver_lib ${target_DEPENDS})
 
 SEGS_REGISTER_COMPONENT(gameserver_lib "${target_INCLUDE_DIR}" "${target_INCLUDE}" )
