--- a/Projects/CoX/Utilities/CMakeLists.txt
+++ b/Projects/CoX/Utilities/CMakeLists.txt
@@ -2,3 +2,5 @@ OPTION(BUILD_COX_MAP_VIEWER "Build CoX map file viewer ?" OFF)
 IF(BUILD_COX_MAP_VIEWER)
   ADD_SUBDIRECTORY(MapViewer)
 ENDIF(BUILD_COX_MAP_VIEWER)
+ADD_SUBDIRECTORY(piggtool)
+
