--- a/Projects/CoX/Common/Servers/CMakeLists.txt
+++ b/Projects/CoX/Common/Servers/CMakeLists.txt
@@ -10,7 +10,6 @@ ${CMAKE_CURRENT_SOURCE_DIR}/RoamingServer.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/ServerHandle.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/ServerManager.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/InterfaceManager.cpp
-${CMAKE_CURRENT_SOURCE_DIR}/Database.cpp
 #${CMAKE_CURRENT_SOURCE_DIR}/CRUD_Link.cpp
 )
 SET(target_INCLUDE
@@ -31,18 +30,6 @@ ${CMAKE_CURRENT_SOURCE_DIR}/CRUD_Events.h
 ${CMAKE_CURRENT_SOURCE_DIR}/crud_link.inl
 )
 
-if(PostgreSQL_FOUND)
-    SET(PsqlDbPlugin_SOURCES
-        ${CMAKE_CURRENT_SOURCE_DIR}/PsqlDatabase.cpp
-        ${CMAKE_CURRENT_SOURCE_DIR}/PsqlDatabase.h
-    )
-endif()
-
-SET(SqliteDbPlugin_SOURCES
-    ${CMAKE_CURRENT_SOURCE_DIR}/SqliteDatabase.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/SqliteDatabase.h
-)
-
 SET(target_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 SET(target_DEPENDS "")
 
@@ -53,16 +40,12 @@ SEGS_ADD_COMPONENT(network_structures LIB)
 SET (target_SOURCES
 ${target_CPP}
 ${target_INCLUDE}
-${PsqlDbPlugin_SOURCES}
-${SqliteDbPlugin_SOURCES}
 )
 
 INCLUDE_DIRECTORIES(${target_INCLUDE_DIR})
-INCLUDE_DIRECTORIES(${PostgreSQL_INCLUDE_DIRS})
 INCLUDE_DIRECTORIES(${ACE_path})
-INCLUDE_DIRECTORIES(${ZLIB_INCLUDE_DIR})
 
 ADD_LIBRARY(cox_server_common STATIC ${target_SOURCES})
 ADD_DEPENDENCIES(cox_server_common ${target_DEPENDS})
-qt5_use_modules(cox_server_common Core)
+qt5_use_modules(cox_server_common Core Sql)
 SEGS_REGISTER_COMPONENT(cox_server_common "${target_INCLUDE_DIR}" "${target_INCLUDE}" )
