--- a/Projects/CoX/Common/StaticStorage/CMakeLists.txt
+++ b/Projects/CoX/Common/StaticStorage/CMakeLists.txt
@@ -1,17 +1,13 @@
+find_package(Qt5Core REQUIRED)
+
 SET(target_CPP
 ${CMAKE_CURRENT_SOURCE_DIR}/Filesystem.cpp
-${CMAKE_CURRENT_SOURCE_DIR}/CostumeStructure.cpp
-${CMAKE_CURRENT_SOURCE_DIR}/MapStructure.cpp
-${CMAKE_CURRENT_SOURCE_DIR}/ReadableStructures.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/CoXHash.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/DataStorage.cpp
 
 )
 SET(target_INCLUDE
 ${CMAKE_CURRENT_SOURCE_DIR}/Filesystem.h
-${CMAKE_CURRENT_SOURCE_DIR}/ReadableStructures.h
-${CMAKE_CURRENT_SOURCE_DIR}/CostumeStructure.h
-${CMAKE_CURRENT_SOURCE_DIR}/MapStructure.h
 ${CMAKE_CURRENT_SOURCE_DIR}/DataStorage.h
 ${CMAKE_CURRENT_SOURCE_DIR}/CoXHash.h
 )
@@ -26,9 +22,11 @@ ${target_INCLUDE}
 
 INCLUDE_DIRECTORIES(${target_INCLUDE_DIR})
 INCLUDE_DIRECTORIES(${ACE_path})
-INCLUDE_DIRECTORIES(${ZLIB_INCLUDE_DIR})
 
-ADD_LIBRARY(static_storage STATIC ${target_SOURCES})
+ADD_LIBRARY(static_storage STATIC ${target_SOURCES} $<TARGET_OBJECTS:gameData>)
 #ADD_DEPENDENCIES(static_storage ${target_DEPENDS})
+set_property(TARGET static_storage APPEND PROPERTY INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR})
+set_property(TARGET static_storage APPEND PROPERTY COMPILE_DEFINITIONS "$<TARGET_PROPERTY:Qt5::Core,INTERFACE_COMPILE_DEFINITIONS>")
+set_property(TARGET static_storage APPEND PROPERTY INCLUDE_DIRECTORIES "$<TARGET_PROPERTY:Qt5::Core,INTERFACE_INCLUDE_DIRECTORIES>")
 
 SEGS_REGISTER_COMPONENT(static_storage "${target_INCLUDE_DIR}" "${target_INCLUDE}" )
