--- a/Projects/CoX/Common/CMakeLists.txt
+++ b/Projects/CoX/Common/CMakeLists.txt
@@ -1,5 +1,8 @@
+INCLUDE_DIRECTORIES(.)
+
 ADD_SUBDIRECTORY(StaticStorage)
 ADD_SUBDIRECTORY(CRUDP_Protocol)
 ADD_SUBDIRECTORY(NetStructures)
 ADD_SUBDIRECTORY(Servers)
+ADD_SUBDIRECTORY(GameData)
 ADD_SUBDIRECTORY(AuthProtocol)
