--- a/Projects/CoX/Data/local_1.cfg
+++ b/Projects/CoX/Data/local_1.cfg
@@ -1,11 +1,11 @@
 [AdminServer]
-AccountDatabase\db_driver=sqlite
+AccountDatabase\db_driver=QSQLITE
 AccountDatabase\db_host=127.0.0.1
 AccountDatabase\db_port=5432
 AccountDatabase\db_name=segs
 AccountDatabase\db_user=segsadmin
 AccountDatabase\db_pass=segs123
-CharacterDatabase\db_driver=sqlite
+CharacterDatabase\db_driver=QSQLITE
 CharacterDatabase\db_host=127.0.0.1
 CharacterDatabase\db_port=5432
 CharacterDatabase\db_name=segs_game
