--- a/Projects/CoX/Common/GameData/CMakeLists.txt
+++ b/Projects/CoX/Common/GameData/CMakeLists.txt
@@ -11,16 +11,23 @@ set(GAMEDATA_SRC
     #def_serializers.cpp
     #seq_serializers.cpp
     #seq_serializers.h
-    #shop_serializers.cpp
-    #shop_serializers.h
+    shop_serializers.cpp
+    shop_serializers.h
     #titles_serializers.cpp
     #titles_serializers.h
     #particle_definitions.h
+    shop_definitions.h
     costume_definitions.h
     bodypart_definitions.h
+
+    WorldData.cpp
+    WorldData.h
+    DataStorage.cpp
+    DataStorage.h
+    #TODO: move this to Components Library
+    CoXHash.cpp
+    CoXHash.h
 )
-add_library(gameData OBJECT ${GAMEDATA_SRC})
-set_property(TARGET gameData APPEND PROPERTY COMPILE_DEFINITIONS "$<TARGET_PROPERTY:Qt5::Core,INTERFACE_COMPILE_DEFINITIONS>")
-set_property(TARGET gameData APPEND PROPERTY INCLUDE_DIRECTORIES "$<TARGET_PROPERTY:Qt5::Core,INTERFACE_INCLUDE_DIRECTORIES>")
+add_library(gameData STATIC ${GAMEDATA_SRC})
+qt5_use_modules(gameData Core)
 set_property(TARGET gameData APPEND PROPERTY INCLUDE_DIRECTORIES "$<TARGET_PROPERTY:cereal_IMP,INTERFACE_INCLUDE_DIRECTORIES>")
-set_property(TARGET gameData APPEND PROPERTY INCLUDE_DIRECTORIES "$<TARGET_PROPERTY:static_storage,INTERFACE_INCLUDE_DIRECTORIES>")
