WIP: Convert SLAV to c++/qt5, add ManifestBuilder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,4 +42,5 @@ include(SEGS_Components)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/common/include)
 
 add_subdirectory(Components)
+add_subdirectory(Utilities)
 add_subdirectory(Projects)
