--- a/Projects/CoX/CMakeLists.txt
+++ b/Projects/CoX/CMakeLists.txt
@@ -1,4 +1,5 @@
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
+include_directories(Common)
 
 ADD_SUBDIRECTORY(Common)
 ADD_SUBDIRECTORY(Utilities)
