--- a/Projects/CoX/Common/CRUDP_Protocol/CMakeLists.txt
+++ b/Projects/CoX/Common/CRUDP_Protocol/CMakeLists.txt
@@ -1,10 +1,11 @@
 SET(target_CPP
-${CMAKE_CURRENT_SOURCE_DIR}/CRUDP_Packet.cpp
-${CMAKE_CURRENT_SOURCE_DIR}/CRUDP_Protocol.cpp
-#${CMAKE_CURRENT_SOURCE_DIR}/GameProtocol.cpp
-#${CMAKE_CURRENT_SOURCE_DIR}/GameProtocolHandler.cpp
-#${CMAKE_CURRENT_SOURCE_DIR}/PacketBase.cpp
-${CMAKE_CURRENT_SOURCE_DIR}/PacketCodec.cpp
+    CRUDP_Packet.cpp
+    CRUDP_Protocol.cpp
+    CRUD_Link.cpp
+    #${CMAKE_CURRENT_SOURCE_DIR}/GameProtocol.cpp
+    #${CMAKE_CURRENT_SOURCE_DIR}/GameProtocolHandler.cpp
+    #${CMAKE_CURRENT_SOURCE_DIR}/PacketBase.cpp
+    PacketCodec.cpp
 )
 SET(target_INCLUDE
 ${CMAKE_CURRENT_SOURCE_DIR}/CRUDP_Packet.h
@@ -13,6 +14,8 @@ ${CMAKE_CURRENT_SOURCE_DIR}/CRUDP_Protocol.h
 #${CMAKE_CURRENT_SOURCE_DIR}/GameProtocolHandler.h
 #${CMAKE_CURRENT_SOURCE_DIR}/PacketBase.h
 ${CMAKE_CURRENT_SOURCE_DIR}/PacketCodec.h
+${CMAKE_CURRENT_SOURCE_DIR}/CRUD_Events.h
+${CMAKE_CURRENT_SOURCE_DIR}/CRUD_Link.h
 )
 
 
@@ -27,7 +30,7 @@ INCLUDE_DIRECTORIES(${target_INCLUDE_DIR})
 INCLUDE_DIRECTORIES(${ACE_path})
 INCLUDE_DIRECTORIES(${ZLIB_INCLUDE_DIR})
 
-ADD_LIBRARY(CRUDP_Protocol ${target_SOURCES})
+ADD_LIBRARY(CRUDP_Protocol STATIC ${target_SOURCES})
 qt5_use_modules(CRUDP_Protocol Core)
 
 SEGS_REGISTER_COMPONENT(CRUDP_Protocol "${target_INCLUDE_DIR}" "${target_INCLUDE}" )
