Trying to fight path length issues on windows
- Move lutefisk build to top-level 3rd_party dir
- Fix imp-lib paths on mingw

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ SET(UNICODE TRUE)
 
 OPTION(ENABLE_SCRIPTING_ENGINE "Build experimental scripting engine ?" OFF)
 OPTION(ENABLE_TESTS "Enable testing unit and functional tests" OFF)
+OPTION(BUILD_COX_MAP_VIEWER "Build CoX map file viewer ?" OFF)
 
 ########################################################################################
 # Prerequisites
