Add ChatDividerMoved event
Add reliability field to CrudP_Packet.

--- a/Projects/CoX/Servers/MapServer/CMakeLists.txt
+++ b/Projects/CoX/Servers/MapServer/CMakeLists.txt
@@ -11,6 +11,7 @@ ${CMAKE_CURRENT_SOURCE_DIR}/NetCommandManager.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/WorldSimulation.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/Events/NewEntity.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/Events/SceneEvent.cpp
+${CMAKE_CURRENT_SOURCE_DIR}/Events/ChatDividerMoved.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/Events/EntitiesResponse.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/Events/ChatMessage.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/Events/InputState.cpp
@@ -29,6 +30,7 @@ ${CMAKE_CURRENT_SOURCE_DIR}/MapServer.h
 ${CMAKE_CURRENT_SOURCE_DIR}/MapEventFactory.h
 ${CMAKE_CURRENT_SOURCE_DIR}/WorldSimulation.h
 ${CMAKE_CURRENT_SOURCE_DIR}/Events/NewEntity.h
+${CMAKE_CURRENT_SOURCE_DIR}/Events/ChatDividerMoved.h
 ${CMAKE_CURRENT_SOURCE_DIR}/Events/SceneEvent.h
 ${CMAKE_CURRENT_SOURCE_DIR}/Events/ChatMessage.h
 ${CMAKE_CURRENT_SOURCE_DIR}/Events/EntitiesResponse.h
