Add pigg unpacking and settings storage to mapviewer

--- a/Projects/CoX/Utilities/MapViewer/CMakeLists.txt
+++ b/Projects/CoX/Utilities/MapViewer/CMakeLists.txt
@@ -19,20 +19,24 @@ find_package(Qt5Core REQUIRED)
 #    src/objecttreewidget.cpp
 #    src/mapmodel.cpp
 #    src/CompositeViewerQOSG.cpp
-#    src/QOSGWidget.cpp
 #)
 
+set(CMAKE_AUTOUIC TRUE)
+set(CMAKE_AUTOMOC TRUE)
 set(SOURCES
     src/MapViewerApp.cpp
     src/MapViewerApp.h
+    src/PiggTools.cpp
+    src/PiggTools.h
     src/main.cpp
 )
 ADD_EXECUTABLE(mapviewer ${SOURCES})
 TARGET_LINK_LIBRARIES(mapviewer
     lutefisk3d_IMP
     ACE
+    gameData cereal_IMP
 )
-qt5_use_modules(mapviewer Core)
+qt5_use_modules(mapviewer Core Widgets  )
 
 add_custom_command(TARGET mapviewer POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E copy_directory ${ThirdParty_Install_Dir}/share/Lutefisk3D/CoreData ${EXECUTABLE_OUTPUT_PATH}/CoreData
