Add PIE flag to authserver

--- a/Projects/CoX/Servers/AuthServer/CMakeLists.txt
+++ b/Projects/CoX/Servers/AuthServer/CMakeLists.txt
@@ -52,6 +52,7 @@ IF(BUILD_SEPARATE)
     ADD_DEPENDENCIES(authserver ${target_DEPENDS} authserver_lib adminserver_lib)
     ADD_DEPENDENCIES(authserver ACE_BUILD)
     qt5_use_modules(authserver Core)
+    set_property(TARGET authserver PROPERTY POSITION_INDEPENDENT_CODE ON)
     IF(MINGW)
         target_link_libraries(authserver ws2_32)
     ENDIF()
