Add Qt based side window that reports current scene state

--- a/Projects/CoX/Utilities/MapViewer/CMakeLists.txt
+++ b/Projects/CoX/Utilities/MapViewer/CMakeLists.txt
@@ -31,6 +31,9 @@ set(SOURCES
     src/CoHSceneConverter.h
     src/CohTextureConverter.cpp
     src/CohTextureConverter.h
+    src/SideWindow.cpp
+    src/SideWindow.h
+    src/SideWindow.ui
     src/main.cpp
 )
 ADD_EXECUTABLE(mapviewer ${SOURCES})
