--- a/Projects/CoX/Utilities/MapViewer/CMakeLists.txt
+++ b/Projects/CoX/Utilities/MapViewer/CMakeLists.txt
@@ -28,6 +28,8 @@ set(SOURCES
     src/MapViewerApp.h
     src/PiggTools.cpp
     src/PiggTools.h
+    src/CohModelConverter.cpp
+    src/CohModelConverter.h
     src/CoHSceneConverter.cpp
     src/CoHSceneConverter.h
     src/CohTextureConverter.cpp
