Add LUA to the build system + preliminary scripting engine interface.

--- a/3rd_party/CMakeLists.txt
+++ b/3rd_party/CMakeLists.txt
@@ -10,24 +10,7 @@ endif()
 ########################################################################################
 
 if(ENABLE_SCRIPTING_ENGINE)
-    ADD_DEFINITIONS(-DSCRIPTING_ENABLED=1)
-    FIND_PACKAGE(Ruby REQUIRED)
-    ExternalProject_Add(
-        MRUBY_BUILD
-        DOWNLOAD_DIR ${PROJECT_SOURCE_DIR}/3rd_party/mruby
-        GIT_REPOSITORY git://github.com/mruby/mruby.git
-        GIT_TAG master # will have to set it to a specific git-hash in the future.
-        UPDATE_COMMAND ""
-        CONFIGURE_COMMAND ""
-        SOURCE_DIR ${PROJECT_SOURCE_DIR}/3rd_party/mruby
-        BUILD_COMMAND ${RUBY_EXECUTABLE} ./minirake
-        BUILD_IN_SOURCE 1
-        INSTALL_COMMAND ""
-        INSTALL_DIR ${PROJECT_SOURCE_DIR}/3rd_party/
-    )
-    SET(MRuby_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/3rd_party/mruby/include)
-    LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/3rd_party/mruby/build/host/lib)
-    SET(MRuby_LIBRARIES mruby)
+    include(ExternalProject_LUA.cmake)
 endif()
 
 if(ENABLE_TESTS)
