--- a/Projects/CoX/Servers/MapServer/CMakeLists.txt
+++ b/Projects/CoX/Servers/MapServer/CMakeLists.txt
@@ -50,8 +50,11 @@ ${target_CPP}
 ${target_INCLUDE}
 )
 ADD_LIBRARY(mapserver_lib STATIC ${target_SOURCES})
-qt5_use_modules(mapserver_lib Core)
+qt5_use_modules(mapserver_lib LINK_PUBLIC Core)
 ADD_DEPENDENCIES(mapserver_lib ${target_DEPENDS})
-
+if(ENABLE_SCRIPTING_ENGINE)
+    target_compile_definitions(mapserver_lib PUBLIC -DSCRIPTING_ENABLED=1)
+    target_link_libraries(mapserver_lib INTERFACE lua_IMP)
+endif()
 SEGS_REGISTER_COMPONENT(mapserver_lib "${target_INCLUDE_DIR}" "${target_INCLUDE}" )
 
