--- a/Projects/CoX/Servers/MapServer/CMakeLists.txt
+++ b/Projects/CoX/Servers/MapServer/CMakeLists.txt
@@ -2,6 +2,7 @@ SET(target_CPP
 ${CMAKE_CURRENT_SOURCE_DIR}/MapManager.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/MapTemplate.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/MapInstance.cpp
+${CMAKE_CURRENT_SOURCE_DIR}/ScriptingEngine.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/MapClient.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/MapServer.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/EntityStorage.cpp
@@ -28,6 +29,7 @@ ${CMAKE_CURRENT_SOURCE_DIR}/MapEvents.h
 ${CMAKE_CURRENT_SOURCE_DIR}/MapRef.h
 ${CMAKE_CURRENT_SOURCE_DIR}/MapServer.h
 ${CMAKE_CURRENT_SOURCE_DIR}/MapEventFactory.h
+${CMAKE_CURRENT_SOURCE_DIR}/ScriptingEngine.h
 ${CMAKE_CURRENT_SOURCE_DIR}/WorldSimulation.h
 ${CMAKE_CURRENT_SOURCE_DIR}/Events/NewEntity.h
 ${CMAKE_CURRENT_SOURCE_DIR}/Events/ChatDividerMoved.h
@@ -54,7 +56,7 @@ qt5_use_modules(mapserver_lib LINK_PUBLIC Core)
 ADD_DEPENDENCIES(mapserver_lib ${target_DEPENDS})
 if(ENABLE_SCRIPTING_ENGINE)
     target_compile_definitions(mapserver_lib PUBLIC -DSCRIPTING_ENABLED=1)
-    target_link_libraries(mapserver_lib INTERFACE lua_IMP)
+    target_link_libraries(mapserver_lib INTERFACE lua_IMP sol2_IMP)
 endif()
 SEGS_REGISTER_COMPONENT(mapserver_lib "${target_INCLUDE_DIR}" "${target_INCLUDE}" )
 
