Working on better network layer logic.

--- a/Projects/CoX/Common/CRUDP_Protocol/CMakeLists.txt
+++ b/Projects/CoX/Common/CRUDP_Protocol/CMakeLists.txt
@@ -16,6 +16,7 @@ ${CMAKE_CURRENT_SOURCE_DIR}/CRUDP_Protocol.h
 ${CMAKE_CURRENT_SOURCE_DIR}/PacketCodec.h
 ${CMAKE_CURRENT_SOURCE_DIR}/CRUD_Events.h
 ${CMAKE_CURRENT_SOURCE_DIR}/CRUD_Link.h
+${CMAKE_CURRENT_SOURCE_DIR}/ILink.h
 )
 
 
